--- a/platformio.ini
+++ b/platformio.ini
@@ -9,6 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:develop]
- platform = espressif32
- board = pico32
- framework = arduino 
+platform = espressif32
+board = pico32
+framework = arduino
+
+lib_deps =
+     # Using library Name
+     Adafruit NeoPixel
+     MQTT
+     StringSplitter
